# hurricane-resilient-supply-chain

./: .gitignore  01_data_and_ml_pipeline.ipynb  02_optimization_and_evaluation.ipynb  03_robustness_and_sensitivity.ipynb  04_interpretable_baselines_and_scenario_checks.ipynb  CITATION.cff  CODEX_INSTRUCTIONS.md  CODEX_PROMPT_CN.txt  DATA_SOURCES.md  LICENSE  PROFILE_SNIPPET.md  README.md  REPRODUCIBILITY.md  START_HERE_CN.md  THIRD_PARTY_NOTICES.md  VALIDATION_REPORT.txt  final_hybrid_reduced_hurricane_scenarios_without_season.csv  final_optimization_scenario_node_risk_matrix_without_season.csv  final_risk_predictions_oof_without_season.csv  final_scenario_node_probabilities_full_without_season.csv  optimization_node_parameters.csv  optimization_transport_arcs.csv  pyproject.toml  requirements.txt  storm_node_dataset_14nodes_200km_50kt.csv  supp_selected_scenarios_by_reduction_method.csv  supply_chain_nodes_14.csv
.github/workflows/: validate.yml
data/: README.md
notebooks/: 01_data_and_ml_pipeline.ipynb  02_optimization_and_evaluation.ipynb  03_robustness_and_sensitivity.ipynb  04_interpretable_baselines_and_scenario_checks.ipynb
results/tables/: conference_baseline_model_comparison.csv  conference_full464_evaluation.csv  conference_full464_summary.csv  conference_nondominated_pareto_all_risk_representations.csv  conference_scenario_reduction_diagnostics_with_random.csv  final_model_comparison_summary_without_season.csv  temporal_holdout_results.csv  (+1 more)
scripts/: run_full_pipeline.py  validate_repository.py
src/hurricane_resilience/: data.py  (+8 more)
tests/: test_core.py
