[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hurricane-resilience"
version = "0.1.0"
description = "Reusable implementation for hurricane-resilient supply-chain research"
authors = [{ name = "Xiaorui Zhao" }]
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "scikit-learn", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
